<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="celestial_starlink" translatable="false">Starlink V3 · 40083</string>
</resources>
